examenes/2017Q2 - 2do parcial/Paez/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 02:16:24 2017
*nat
:PREROUTING ACCEPT [1151:192017]
:INPUT ACCEPT [915:153223]
:OUTPUT ACCEPT [5:621]
:POSTROUTING ACCEPT [5:621]
-A POSTROUTING -s 192.168.20.3/32 -j MASQUERADE
-A POSTROUTING -s 192.168.20.3/32 -j MASQUERADE
COMMIT
# Completed on Wed Nov 15 02:16:24 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 02:16:24 2017
*mangle
:PREROUTING ACCEPT [5834:1109923]
:INPUT ACCEPT [5799:1098160]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [48:4233]
:POSTROUTING ACCEPT [31:2805]
COMMIT
# Completed on Wed Nov 15 02:16:24 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 02:16:24 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Wed Nov 15 02:16:24 2017
